--- a/Web/WebContent/template/garden_template.xhtml
+++ b/Web/WebContent/template/garden_template.xhtml
@@ -30,7 +30,8 @@
 		rel="stylesheet" type="text/css" />
 	<link href="#{applicationController.path}assets/css/responsive.css"
 		rel="stylesheet" type="text/css" />
-	<link href="#{applicationController.path}css/style.css" rel="stylesheet" type="text/css"/>
+		<link href="#{applicationController.path}css/stylee.css"
+		rel="stylesheet" type="text/css" />
 	<script src="#{applicationController.path}assets/js/modernizr.min.js"></script>
 
 	<link  href="#{applicationController.path}Source/css/MooDialog.css" rel="stylesheet" />
