--- a/Web/WebContent/template/garden_template.xhtml
+++ b/Web/WebContent/template/garden_template.xhtml
@@ -50,7 +50,7 @@
 </h:head>
 <ui:insert name="event" />
 <h:body styleClass="fixed-left">
-	<h:form id="form">
+	<h:form id="form" enctype="multipart/form-data">
 	<div id="page_effect" style="display: none;"></div>
 	<div id="wrapper">
 		<ui:include src="/template/common/topbar.xhtml" />
