--- a/Web/WebContent/resource/css/stylee.css
+++ b/Web/WebContent/resource/css/stylee.css
@@ -3677,3 +3677,12 @@ label {
 .zoomWindow {
 	z-index: 9999;
 }
+
+
+.en-table .table>thead>tr>th,.table>tbody>tr>th,.table>tfoot>tr>th,.table>thead>tr>td,.table>tbody>tr>td,.table>tfoot>tr>td
+	{
+	padding: 8px !important;
+	line-height: 1.42857143 !important;
+	vertical-align: top !important;
+	border-top: 1px solid #ddd !important;
+}
