--- a/Web/WebContent/template/garden_template.xhtml
+++ b/Web/WebContent/template/garden_template.xhtml
@@ -121,7 +121,7 @@
 			//]]>
 		</script>
 		</p:panel>
-
+<ui:insert name="script"></ui:insert>
 	<script>
 		//<![CDATA[
 		var resizefunc = [];
@@ -156,10 +156,6 @@
 	<script type="text/javascript">
 		//<![CDATA[
 		jQuery(document).ready(function($) {
-			$('.counter').counterUp({
-				delay : 100,
-				time : 1200
-			});
 		});
 		//]]>
 	</script>
